--- a/src/styles/MapRenderer.module.scss
+++ b/src/styles/MapRenderer.module.scss
@@ -217,7 +217,7 @@
     margin-right: 0.25rem;
     
     &.generic {
-      color: #8B4513;
+      color: #6B4423;
     }
     
     &.brick {
@@ -234,8 +234,7 @@
     }
     
     &.grain {
-      color: #FFFACD;
-      border: 1px solid #666;
+      color: #7CB342;
     }
     
     &.ore {
